Added anchor-vault as a submodule repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "rust_project2"]
 	path = rust_project2
 	url = https://github.com/Weebad123/Rust-airdrop-project1
+[submodule "anchor-vault"]
+	path = anchor-vault
+	url = https://github.com/Weebad123/anchor-vault
