--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,4 @@
 	url = https://github.com/Weebad123/anchor-amm.git
 [submodule "capstone-curachain"]
 	path = capstone-curachain
-	url = https://github.com/Weebad123/curachain.git
+	url = https://github.com/Weebad123/curachain-2.0.git
